# an24_cpp

./: .gitignore  AGENTS.md  BLUEPRINT_HIERARCHY_PLAN.md  BLUEPRINT_VISIBILITY_TODO.md  CMakeLists.txt  CONTEXT.md  CONVERT_4_TESTS.md  CTestTestfile.cmake  EDITOR_CODE_ANALYSIS_REPORT.md  EDITOR_VARIANT_USAGE.cpp  FLAT_BLUEPRINT_REFACTOR.md  HIERARCHICAL_BLUEPRINTS_TODO.md  INTERNED_ID_MIGRATION.md  JSON_FORMAT_V2_DESIGN.md  MDI_IMPLEMENTATION_GUIDE.md  MDI_IMPLEMENTATION_SPEC.md  NON_BAKED_IN_IMPL_PLAN.md  NOTES_IMPROVEMENTS.md  OOP_RENDERER_TODO.md  PROMPT_add_domain_fields.md  PROMPT_cleanup_legacy.md  PROMPT_editor_componentvariant.md  PROMPT_fix_componentvariant_instantiation.md  PROMPT_node_color_dialog.md  PROMPT_provider_pattern_migration.md  PROMPT_reenable_editor_tests.md  PROMPT_spatial_grid_hittest.md  PROMPT_theme_colors.md  PROMPT_visual_directory_refactor.md  REFACTORING_REPORT.md  REMOVE_NAMESPACE_PLAN.md  SCENE_GRAPH_PROGRESS.md  SCENE_GRAPH_REFACTORING.md  SESSION_2025_03_10_SPATIAL_GRID_AND_HOVER.md  SOR_SAFETY_PROPOSALS.md  TASK_bus_port_swap_fix.md  TODO.md  UI_EXTRACTION_PLAN.md  UI_REFACTORING_PLAN.md  UNIFIED_FORMAT_REFACTOR.md  (+30 more)
TASKS/: task_3.2_render_context.md  task_4.1_linear_layout.md  task_5.1_visual_widget_extends_ui.md  task_5_visual_widget_inheritance.md  task_5b_mechanical_fixes.md
benchmarks/: CMakeLists.txt  CTestTestfile.cmake
blueprints/: lamp_pass_through.json  simple_battery.json
components/: AGK47.json  AND.json  Add.json  Any_V_to_Bool.json  Battery.json  BlueprintInput.json  BlueprintOutput.json  Bus.json  Comparator.json  DMR400.json  Divide.json  ElectricHeater.json  ElectricPump.json  GS24.json  Generator.json  Gyroscope.json  HighPowerLoad.json  HoldButton.json  IndicatorLight.json  InertiaNode.json  Inverter.json  LerpNode.json  Load.json  Merger.json  Multiply.json  NAND.json  NOT.json  OR.json  P.json  PD.json  PI.json  PID.json  Positive_V_to_Bool.json  RU19A.json  RUG82.json  Radiator.json  RefNode.json  Relay.json  Resistor.json  SolenoidValve.json  (+8 more)
docs/: vsu_ru19a.md  (+2 more)
examples/: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.bak2  CTestTestfile.cmake  an24_editor  an24_editor.cpp  bench_vsu_aot  benchmark.cpp  benchmark_jit_vs_aot  benchmark_jit_vs_aot.cpp  codegen_test  codegen_test.cpp  components_test.cpp  convert_library.cpp  debug.cpp  editor_docking_example.cpp  hello_world  imgui_theme_example.cpp  json_test.cpp  main.cpp  push_test.cpp
examples/benchmarks/: CTestTestfile.cmake
examples/examples/: CTestTestfile.cmake  aot_test  benchmark  codegen_test  components_test  debug_test  hello_world  json_test  test_generated
examples/src/: CTestTestfile.cmake
examples/src/jit_solver/: CTestTestfile.cmake
examples/src/json_parser/: CTestTestfile.cmake
examples/tests/: CTestTestfile.cmake  cmake_test_discovery_0f2bd02f7d.json  cmake_test_discovery_444f23c324.json  cmake_test_discovery_59753f2f8b.json  cmake_test_discovery_666ab2d475.json  cmake_test_discovery_83765cedcd.json  cmake_test_discovery_b910567b9e.json  cmake_test_discovery_caee2b3b70.json  cmake_test_discovery_dbf57e1244.json  cmake_test_discovery_e909a8567c.json  cmake_test_discovery_fb59c9fe96.json  editor_data_tests  editor_data_tests[1]_include.cmake  editor_data_tests[1]_tests.cmake  editor_event_tests[1]_include.cmake  editor_gl_setup_tests  editor_gl_setup_tests[1]_include.cmake  editor_gl_setup_tests[1]_tests.cmake  editor_hittest_tests  editor_hittest_tests[1]_include.cmake  editor_hittest_tests[1]_tests.cmake  editor_interaction_tests  editor_interaction_tests[1]_include.cmake  editor_interaction_tests[1]_tests.cmake  editor_persist_tests  editor_persist_tests[1]_include.cmake  editor_persist_tests[1]_tests.cmake  editor_render_tests[1]_include.cmake  editor_router_tests  editor_router_tests[1]_include.cmake  editor_router_tests[1]_tests.cmake  editor_routing_tests  editor_routing_tests[1]_include.cmake  editor_routing_tests[1]_tests.cmake  editor_simulation_tests[1]_include.cmake  editor_viewport_tests  editor_viewport_tests[1]_include.cmake  editor_viewport_tests[1]_tests.cmake  editor_widget_tests  editor_widget_tests[1]_include.cmake  (+7 more)
src/jit_solver/: CMakeLists.txt  CTestTestfile.cmake  SOR_constants.h  component.cpp  component.h  component_traits.h  jit_solver.cpp  jit_solver.h  push_solver.cpp  push_solver.cpp.bak  push_solver.h  scheduling.h  simulator.cpp  simulator.h  state.cpp  state.h  systems.cpp  systems.h
src/jit_solver/components/: all.cpp  all.cpp.bak  all.h  component.h  explicit_instantiations.cpp  explicit_instantiations.h  port_registry.h  provider.h  provider_components.h  push_components.h  push_components.h.bak
src/json_parser/: CMakeLists.txt  CTestTestfile.cmake  json_parser.cpp  json_parser.h
tests/: CMakeLists.bak  CMakeLists.txt  CMakeLists.txt.bak  CTestTestfile.cmake  add_mdi_corrected.sh  add_mdi_final.sh  add_mdi_tests.cmake  add_mdi_tests_full.cmake  add_mdi_tests_simple.cmake  and_gate_debug_tests  and_gate_debug_tests[1]_include.cmake  and_gate_debug_tests[1]_tests.cmake  aot_composite_tests[1]_include.cmake  arithmetic_tests  arithmetic_tests[1]_include.cmake  arithmetic_tests[1]_tests.cmake  asym_slew_rate_tests  asym_slew_rate_tests[1]_include.cmake  asym_slew_rate_tests[1]_tests.cmake  asym_tmo_tests  asym_tmo_tests[1]_include.cmake  asym_tmo_tests[1]_tests.cmake  azs_tests  azs_tests[1]_include.cmake  azs_tests[1]_tests.cmake  bake_in_tests[1]_include.cmake  blueprint_integration_tests  blueprint_integration_tests[1]_include.cmake  blueprint_integration_tests[1]_tests.cmake  blueprint_loading_tests  blueprint_loading_tests[1]_include.cmake  blueprint_loading_tests[1]_tests.cmake  blueprint_ports_tests  blueprint_ports_tests[1]_include.cmake  blueprint_ports_tests[1]_tests.cmake  blueprint_v2_tests[1]_include.cmake  clamp_normalize_tests[1]_include.cmake  cmake_test_discovery_0752c21d55.json  cmake_test_discovery_0b2165ea24.json  cmake_test_discovery_0fdd4f0ade.json  (+314 more)
tools/: CMakeLists.txt  CTestTestfile.cmake  convert_blueprint_v1_to_v2.py  update_port_registry.cpp  verify_v2.py
(+364 files in other folders)
